[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Area2D.gd" type="Script" id=1]
[ext_resource path="res://scripts/KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://scripts/KinematicBody2D2.gd" type="Script" id=3]
[ext_resource path="res://bedstead-002.002/bedstead-condensed.otf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/Label.gd" type="Script" id=5]
[ext_resource path="res://scripts/Label2.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.25, 73.25 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10.0588, 15 )

[sub_resource type="DynamicFont" id=7]
size = 59
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 512.0
margin_bottom = 600.0
color = Color( 0.14902, 0.415686, 0.831373, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 512.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.831373, 0.227451, 0.14902, 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 512, 300 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Area2D"]
modulate = Color( 0.0431373, 0.0431373, 0.0470588, 1 )
scale = Vector2( 10, 10 )
mesh = SubResource( 2 )

[node name="A1" type="KinematicBody2D" parent="."]
modulate = Color( 0.992157, 0.113725, 0.0666667, 1 )
position = Vector2( 51, 288 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="A1"]
shape = SubResource( 3 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="A1"]
scale = Vector2( -8.5, 74 )
mesh = SubResource( 4 )

[node name="A2" type="KinematicBody2D" parent="."]
modulate = Color( 0.0941176, 0.141176, 0.878431, 1 )
position = Vector2( 984, 509 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="A2"]
shape = SubResource( 3 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="A2"]
scale = Vector2( -8.5, 74 )
mesh = SubResource( 4 )

[node name="Body1" type="StaticBody2D" parent="."]
physics_interpolation_mode = 2
modulate = Color( 0.94902, 0.184314, 0.0980392, 1 )
position = Vector2( 512, 595 )
collision_layer = 3855

[node name="MeshInstance2D" type="MeshInstance2D" parent="Body1"]
modulate = Color( 0.968627, 0.203922, 0.0470588, 1 )
scale = Vector2( -512.235, -10.981 )
mesh = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body1"]
scale = Vector2( 51, 0.5 )
shape = SubResource( 6 )
one_way_collision = true

[node name="Body2" type="StaticBody2D" parent="."]
physics_interpolation_mode = 2
position = Vector2( 512, 5 )
collision_layer = 3855

[node name="MeshInstance2D" type="MeshInstance2D" parent="Body2"]
modulate = Color( 0.32549, 0.0588235, 0.894118, 1 )
scale = Vector2( -512.235, -10.981 )
mesh = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body2"]
scale = Vector2( 51, 0.5 )
shape = SubResource( 6 )
one_way_collision = true

[node name="Label" type="Label" parent="."]
margin_left = 700.0
margin_top = 60.0
margin_right = 740.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.905882, 1 )
custom_fonts/font = SubResource( 7 )
text = "Q"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="Label2" type="Label" parent="."]
margin_left = 300.0
margin_top = 60.0
margin_right = 340.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0.870588, 0.219608, 0.141176, 1 )
custom_fonts/font = SubResource( 7 )
text = "Q"
align = 1
valign = 1
script = ExtResource( 7 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="win1" from="Area2D" to="Area2D" method="_on_Area2D_win1"]
[connection signal="win1" from="Area2D" to="Label" method="_on_Area2D_win1"]
[connection signal="win2" from="Area2D" to="Area2D" method="_on_Area2D_win2"]
[connection signal="win2" from="Area2D" to="Label2" method="_on_Area2D_win2"]
